# aiida-nanotech-empa

./: .coveragerc  .gitignore  .notusestyle.yapf  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.json  setup.py
.github/: check_version.py  install_cp2k.sh  install_qe.sh
.github/workflows/: ci.yml  publish-on-pypi.yml  publish.yml
aiida_nanotech_empa/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py  utils.py  version.py
aiida_nanotech_empa/cp2k/files/: POTENTIALS_DEFAULT  atomic_kinds.yml  cp2k.inp  cp2k.yml  cp2k2yaml.py  gw_protocols.yml  molecule_opt_protocol.yml
aiida_nanotech_empa/cp2k/utils/: utils.py
aiida_nanotech_empa/cp2k/workflows/: molecule_gw_workchain.py  molecule_opt_workchain.py
aiida_nanotech_empa/files/cp2k/: atomic_kinds.yml  cp2k.inp  cp2k.yml  cp2k2yaml.py  gw_protocols.yml
aiida_nanotech_empa/gaussian/parsers/: cubegen_pymol_parser.py
aiida_nanotech_empa/gaussian/utils/: postprocess.py  pymol_render.py
aiida_nanotech_empa/gaussian/workflows/: __init__.py  gaussian_delta_scf_workchain.py  gaussian_radical_workchain.py  gaussian_scf_cubes_workchain.py  gaussian_spin_opt_workchain.py  gaussian_spin_workchain.py
aiida_nanotech_empa/parsers/: __init__.py  cp2k_gw_parser.py  cp2k_neb_parser.py  cubegen_pymol_parser.py  gaussian_casscf_parser.py  pp_parser.py
aiida_nanotech_empa/plugins/: __init__.py  afm.py  cube_handler.py  cubehandler.py  hrstm.py  overlap.py  stm.py
aiida_nanotech_empa/schedulers/: __init__.py  lsf_ethz_euler.py  slurm_ethz_euler.py
aiida_nanotech_empa/utils/: analyze_structure.py  common_utils.py  cp2k_utils.py  cube_utils.py  cycle_tools.py  gaussian_spin_wc_postprocess.py  gaussian_wcs_postprocess.py  igor.py  nmr.py  pp_cube_utils.py  pymol_render.py  split_structure.py  stm_tools.py  string_utils.py
aiida_nanotech_empa/workflows/: nanoribbon.py
aiida_nanotech_empa/workflows/cp2k/: __init__.py  adsorbed_gw_ic_workchain.py  adsorption_energy_workchain.py  afm_workchain.py  bsse_workchain.py  bulk_opt_workchain.py  cell_opt_workchain.py  cp2k_benchmark_workchain.py  cp2k_utils.py  diag_workchain.py  dielectric_constants_workchain.py  fragment_separation.py  geo_opt_workchain.py  hrstm_workchain.py  molecule_gw_workchain.py  molecule_opt_gw_workchain.py  molecule_opt_workchain.py  neb_workchain.py  orb_workchain.py  orbitals_workchain.py  pdos_two_structures_workchain.py  pdos_workchain.py  phonons_workchain.py  reftraj_md_workchain.py  replica_workchain.py  slab_opt_workchain.py  std_opt_workchain.py  std_scf_workchain.py  stm_workchain.py
aiida_nanotech_empa/workflows/cp2k/data/: ALL_POTENTIALS  BASIS_DEFAULT  BASIS_MOLOPT  GW_BASIS_SET  K_GW_BASIS  POTENTIAL  RI_HFX_BASIS_all  atomic_kinds.yml  atomtypes_2pp.ini  atomtypes_pp.ini  mps-wrapper.sh
aiida_nanotech_empa/workflows/cp2k/protocols/: benchmarks.yml  bsse_protocol.yml  bulk_opt_protocol.yml  cell_opt_protocol.yml  efield_geo.yaml  fragment_separation.yml  geo_opt_protocol.yml  gw_protocols.yml  md_reftraj_protocol.yml  molecule_opt_protocol.yml  neb_protocol.yml  phonons_protocol.yml  scf_diag_protocol.yml  scf_ot_protocol.yml  scf_protocol.yml  slab_opt_protocol.yml
aiida_nanotech_empa/workflows/gaussian/: __init__.py  casscf_series_workchain.py  casscf_workchain.py  common.py  constr_opt_chain_workchain.py  delta_scf_workchain.py  hf_mp2_workchain.py  natorb_workchain.py  nics_workchain.py  oldnics_workchain.py  relax_scf_cubes_workchain.py  relax_workchain.py  scf_cubes_workchain.py  scf_workchain.py  spin_opt_workchain.py  spin_workchain.py  vibronic_stm_workchain.py
aiida_nanotech_empa/workflows/qe/: __init__.py  nanoribbon.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: __init__.py  example_01.py  vibronic_stm_gaussian.ipynb
examples/data/sssp_minimal/: H.upf
examples/plugins/: example_cubehandler.py  example_use_aiida_shell.py
examples/workflows/: .gitignore  C9H7N.xyz  aa  benzene-diradical.xyz  benzene.xyz  big_molecule.xyz  c2h2.xyz  c2h2_for_pdos.xyz  c2h2_no_spin.xyz  c2h2_on_au111.xyz  c2h2_spin.xyz  c2h4.xyz  example_cp2k_ads_gw_ic.py  example_cp2k_adsorption_energy.py  example_cp2k_afm.py  example_cp2k_benchmark.py  example_cp2k_bulkopt.py  example_cp2k_cellopt.py  example_cp2k_diag.py  example_cp2k_epsilon.py  example_cp2k_epsilon2.py  example_cp2k_fragment_separation.py  example_cp2k_geo_opt.py  example_cp2k_gw.py  example_cp2k_hrstm.py  example_cp2k_md_reftraj.py  example_cp2k_mol_opt_gw.py  example_cp2k_molopt.py  example_cp2k_neb.py  example_cp2k_orb.py  example_cp2k_pdos.py  example_cp2k_phonons.py  example_cp2k_replica_chain.py  example_cp2k_slabopt.py  example_cp2k_stm.py  example_gaussian_casscf.py  example_gaussian_nics.py  example_gaussian_opt.py  example_gaussian_spin.ipynb  example_gaussian_spin.py  (+11 more)
tests/: test_calculations.py  test_cli.py
