[metadata]
name = aiida-nanotech-empa
version = attr: aiida_nanotech_empa.version.__version__
description = AiiDA plugins and workflows developed at nanotech@surfaces group from Empa.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiida-nanotech-empa
author = nanotech@surfaces
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: AiiDA

[options]
include_package_data = True
packages = find:
python_requires >=3.7
zip_safe = False
install_requires =
    aiida-core>=1.2.1,<2.0.0
    aiida-quantumespresso>=3.5.2
    aiida-cp2k
    ase>=3.0
    aiida-gaussian>=1.4.3
    pillow>=8.0.0
    more-itertools

[options.extras_require]
testing = 
    pgtest~=1.3.1
    wheel~=0.31
    coverage
    pytest~=3.6,<5.0.0
    pytest-cov
pre-commit =
    astroid>=2.4.0
    pre-commit>=2.7.0
    prospector==1.5.*
    pylint==2.10.*
dev =
    bumpver==2021.1114

[options.entry_points]
aiida.parsers =
    nanotech_empa.pp = aiida_nanotech_empa.parsers.pp_parser:PpParser
    nanotech_empa.cp2k_gw_parser = aiida_nanotech_empa.parsers.cp2k_gw_parser:Cp2kGWParser
    nanotech_empa.gaussian.cubegen_pymol = aiida_nanotech_empa.parsers.cubegen_pymol_parser:CubegenPymolParser
    nanotech_empa.gaussian.casscf = aiida_nanotech_empa.parsers.gaussian_casscf_parser:GaussianCasscfParser
aiida.workflows =
    nanotech_empa.nanoribbon = aiida_nanotech_empa.workflows.qe.nanoribbon:NanoribbonWorkChain
    nanotech_empa.gaussian.scf = aiida_nanotech_empa.workflows.gaussian:GaussianScfWorkChain
    nanotech_empa.gaussian.relax = aiida_nanotech_empa.workflows.gaussian:GaussianRelaxWorkChain
    nanotech_empa.gaussian.delta_scf = aiida_nanotech_empa.workflows.gaussian:GaussianDeltaScfWorkChain
    nanotech_empa.gaussian.natorb = aiida_nanotech_empa.workflows.gaussian:GaussianNatOrbWorkChain
    nanotech_empa.gaussian.spin = aiida_nanotech_empa.workflows.gaussian:GaussianSpinWorkChain
    nanotech_empa.gaussian.hf_mp2 = aiida_nanotech_empa.workflows.gaussian:GaussianHfMp2WorkChain
    nanotech_empa.gaussian.constr_opt_chain = aiida_nanotech_empa.workflows.gaussian:GaussianConstrOptChainWorkChain
    nanotech_empa.gaussian.casscf = aiida_nanotech_empa.workflows.gaussian:GaussianCasscfWorkChain
    nanotech_empa.gaussian.casscf_series = aiida_nanotech_empa.workflows.gaussian:GaussianCasscfSeriesWorkChain
    nanotech_empa.cp2k.molecule_opt = aiida_nanotech_empa.workflows.cp2k.molecule_opt_workchain:Cp2kMoleculeOptWorkChain
    nanotech_empa.cp2k.slab_opt = aiida_nanotech_empa.workflows.cp2k.slab_opt_workchain:Cp2kSlabOptWorkChain
    nanotech_empa.cp2k.bulk_opt = aiida_nanotech_empa.workflows.cp2k.bulk_opt_workchain:Cp2kBulkOptWorkChain
    nanotech_empa.cp2k.molecule_gw =  aiida_nanotech_empa.workflows.cp2k.molecule_gw_workchain:Cp2kMoleculeGwWorkChain
    nanotech_empa.cp2k.ads_gw_ic = aiida_nanotech_empa.workflows.cp2k.adsorbed_gw_ic_workchain:Cp2kAdsorbedGwIcWorkChain
aiida.schedulers =
    lsf_ethz_euler = aiida_nanotech_empa.schedulers.lsf_ethz_euler:ETHZEulerLsfScheduler


[bumpver]
current_version = "v0.6.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiida_nanotech_empa/version.py =
    __version__ = "{pep440_version}"

